<resources>
    <string name="app_name">MyStore</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_first_name">Enter name</string>
    <string name="enter_email">Enter a valid email</string>
    <string name="enter_phone">Enter a phone number</string>
    <string name="enter_password">Enter Password</string>
    <string name="add_account">ADD ACCOUNT</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="long_description">I am trying to add a very brief description about the iten, but I dont know what else to write. so please excuse</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="buy">Buy</string>
    <string name="item_short_description">This is a short description of the item. The size of the view will increase</string>
    <string name="sign_out">Sign out</string>
    <string name="price_label">Price(in Rs.)</string>
    <string name="quantity_label">Available quantity</string>
    <string name="error_message_quantity">Sorry, looks like the item is currently out of stock.</string>

    <string name="enter_address">Enter Address</string>
    <string name="enter_name">Enter Name</string>
    <string name="account">Account</string>
    <string name="contact_us">Contact Us</string>

    <string name="header_name">Name</string>
    <string name="header_address">Address</string>
    <string name="header_email">Email</string>
    <string name="header_phone">Phone</string>
    <string name="save">Save</string>
    <string name="revert">Revert</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_old_password">Enter old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="change_password">Change Password</string>
    <string name="update_password">Update Password</string>
    <string name="password_criteria">
        &#8226;Password must be >5 characters<br />
        &#8226;Password must be contain at least 1 uppercase characters, 1 lowercase character and a digit between 0-9<br />
        &#8226;Password must not contain any of these special character - "/", "$", ",", ".", "*"<br />
    </string>
    <string name="add_to_cart">Add to cart</string>
</resources>